[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/UI/SimpleBox.tres" type="Theme" id=1]
[ext_resource path="res://src/Menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/Fonts/Watermelon Days.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 256
outline_size = 5
outline_color = Color( 0.301961, 0.65098, 1, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 96
outline_size = 5
outline_color = Color( 0.301961, 0.65098, 1, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[node name="MainMenu" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -565.5
margin_right = 565.5
margin_bottom = 291.0
custom_fonts/font = SubResource( 1 )
text = "crystal dash"

[node name="CreatorLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -467.5
margin_top = -265.0
margin_right = 467.5
margin_bottom = -155.0
custom_fonts/font = SubResource( 2 )
text = "DEVELOPED BY SPARROWWORKS"

[node name="PlayButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -30.0
margin_right = 90.0
margin_bottom = 31.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Play"

[node name="HiButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = 70.0
margin_right = 145.0
margin_bottom = 149.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Highscores"

[node name="HelpButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 170.0
margin_right = 65.0
margin_bottom = 249.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Help"

[node name="OptionsButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = 270.0
margin_right = 105.0
margin_bottom = 349.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Options"

[node name="QuitButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 370.0
margin_right = 65.0
margin_bottom = 449.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="CanvasLayer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HiButton" to="." method="_on_HiButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="CanvasLayer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/QuitButton" to="." method="_on_QuitButton_pressed"]
